--- a/from-scratch/Vagrantfile
+++ b/from-scratch/Vagrantfile
@@ -5,10 +5,22 @@ Vagrant.configure("2") do |config|
   # make sure you've run the ./vagrant-plugins.ps1 (or run the command in it)
   config.disksize.size = "50GB" # should be defaulted to 60 ish, but just in case.
 
-  # machine settings.
-	config.vm.provider "virtualbox" do |v|
-		v.memory = 6144 # 6GB RAM
-		v.cpus = 4 # 4 cores
+  # disable the default share. we won't use it.
+  config.vm.synced_folder ".", "/vagrant", disabled: true
+
+  # share a git subfolder into the vagrant machine.
+  config.vm.synced_folder "./git", "/home/vagrant/git/"
+  
+  # machine settings (virtualbox specific).
+	config.vm.provider "virtualbox" do
+    memory = 6144 # 6GB RAM
+    cpus = 4 # 4 cores
+  end
+
+  # boot config trigger
+  config.trigger.before :up do
+    info = "Running the vagrant-plugins.ps1"
+    run "powershell -file local.ps1"
   end
 
   # forwarded ports for running wander tests locally.
