--- a/scripts/dotfiles/config
+++ b/scripts/dotfiles/config
@@ -1,15 +1,25 @@
+#!/bin/bash
+
+source ~/.dotfiles/versions.sh
+
 # add openjdk 11 to the environment.
-if [ -d /usr/local/openjdk-11.28 ]; then
+if [ -d "/usr/local/openjdk-${JDK_VER}" ]; then
   echo 'exporting java env'
-  export JAVA_HOME="/usr/local/openjdk-11.28"
+  export JAVA_HOME="/usr/local/openjdk-${JDK_VER}"
   export PATH="$JAVA_HOME/bin:$PATH"
 fi
 
 # add the maven home environment variable
-if [ -d /usr/local/apache-maven-3.6.1 ]; then
+if [ -d "/usr/local/apache-maven-${MVN_VER}" ]; then
   echo 'exporting maven env'
-  export MAVEN_HOME="/usr/local/apache-maven-3.6.1"
+  export MAVEN_HOME="/usr/local/apache-maven-${MVN_VER}"
   # no path export. bin is symlinked to /usr/local/bin/mvn
+fi
+
+# start docker
+if [ hash dockerd 2>/dev/null ]; then
+  echo 'starting dockerd'
+  echo -e "vagrant\n" | sudo --stdin dockerd &
 fi
 
 # point kops at hpalpine ( kubernetes namespace setup )
@@ -19,10 +29,4 @@ if [ -d ~/git/ops/cicd ]; then
   source env.sh
   source kops_env.sh
   cd ~/git
-fi
-
-# start docker
-if [ hash dockerd 2>/dev/null ]; then
-  echo 'starting docker service'
-  echo -e "vagrant\n" | sudo --stdin dockerd &
 fi
